--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "homepage": "https://github.com/jimkang/webimage",
   "devDependencies": {
     "assert-no-error": "^1.0.0",
+    "longjohn": "^0.2.12",
     "rimraf": "^2.6.2",
     "tape": "^4.8.0"
   },
   "dependencies": {
     "call-next-tick": "^2.0.1",
-    "puppeteer": "^0.13.0"
+    "jimp": "^0.2.28",
+    "puppeteer": "^0.13.0",
+    "standard-bail": "^2.0.1"
   }
 }
