--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "tape": "^4.8.0"
   },
   "dependencies": {
+    "async-waterfall": "^0.1.5",
     "call-next-tick": "^2.0.1",
     "jimp": "^0.2.28",
+    "lodash.curry": "^4.1.1",
     "puppeteer": "^0.13.0",
-    "standard-bail": "^2.0.1"
+    "standard-bail": "^2.0.1",
+    "verror": "^1.10.0"
   }
 }
