Fix animated gifs so that they show up on mobile phones and also Ubuntu Image Viewer. Swap omggif out for gif.js.

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "call-next-tick": "^2.0.1",
     "d3-array": "^2.3.1",
     "d3-queue": "^3.0.7",
+    "gif.js": "github:jnordberg/gif.js",
     "jimp": "^0.5.3",
     "lodash.curry": "^4.1.1",
-    "omggif": "^1.0.10",
     "puppeteer": "^1.19.0",
     "standard-bail": "^2.0.1",
     "verror": "^1.10.0"
