--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "assert-no-error": "^1.0.0",
     "longjohn": "^0.2.12",
     "rimraf": "^2.6.2",
-    "tape": "^4.8.0"
+    "tape": "^5.0.1"
   },
   "dependencies": {
     "async-waterfall": "^0.1.5",
@@ -31,6 +31,7 @@
     "gif.js": "github:jnordberg/gif.js",
     "jimp": "^0.5.3",
     "lodash.curry": "^4.1.1",
+    "playwright": "^1.1.1",
     "puppeteer": "^1.19.0",
     "standard-bail": "^2.0.1",
     "verror": "^1.10.0"
